# euc_qla_tools

./: CMakeLists.txt  README.md  bt.cpp  bt.h  dwatcher.cpp  dwatcher.h  metadatareader.cpp  metadatareader.h  process.h  propdef.h  tools.cpp  tools.h
